# extract-sub

./: .gitignore  README.md  app.py  processor.py  pyproject.toml  run.bat
core/: __init__.py  config.py  jobs.py  media.py
features/douyin/: __init__.py  auto_fetch.py  processor.py  router.py
features/downloader/: __init__.py  processor.py  router.py  settings.py
features/logo_stamp/: processor.py  router.py
features/speech_to_text/: __init__.py  processor.py  router.py
features/vision_ocr/: __init__.py  processor.py  router.py
static/: app.js  index.html  style.css
static/js/: app.js  douyin-userscript.js  douyin.js  downloader.js  drop-zone.js  folder-picker.js  jobs.js  logo-stamp.js  stt.js  utils.js  vision.js
